--- a/Semana2/Sesion4.ipynb
+++ b/Semana2/Sesion4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPI55oRu8V+Hq8c+Va7Xd98",
+      "authorship_tag": "ABX9TyNRV6PUXlX0f2c4ZSpGmYAB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1872,7 +1872,7 @@
         "        edades.plot.hist(alpha=0.5, label=depto)\n",
         "        plt.xlabel('Edad')\n",
         "        plt.legend()\n",
-        "        outpath = os.path.join(outpath,\"Edad.png\")\n",
+        "        outpath = os.path.join(outpath,\"Edad.pdf\")\n",
         "        plt.savefig(outpath, dpi=15)\n",
         "        plt.close()"
       ],
@@ -1881,9 +1881,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KebDS1sBEZwI",
-        "outputId": "d3bc2473-9008-4eaa-d37e-64cf5d7c358f"
+        "outputId": "c61b21bb-826d-40c5-9f8d-c923baa5f460"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -1904,16 +1904,35 @@
             "BaseDatos/Proceso_Header_8/muestra.csv\n",
             "Salida/folder_8\n",
             "BaseDatos/Proceso_Header_5/muestra.csv\n",
-            "Salida/folder_5\n"
+            "Salida/folder_5\n",
+            "BaseDatos/Proceso_Header_4/muestra.csv\n",
+            "Salida/folder_4\n",
+            "BaseDatos/Proceso_Header_3/muestra.csv\n",
+            "Salida/folder_3\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Este ciclo lo use para borrar en cada carpeta de salida, las imagenes generas incorrectamente\n",
+        "#for i in range(1,11):\n",
+        "#  os.chdir(f'/content/drive/MyDrive/ColabNotebooks/Cursos/CursoCienciaDatos/Semana2/Salida/folder_{i}')\n",
+        "#  !ls\n",
+        "  #!rm *.png"
+      ],
       "metadata": {
         "id": "2Kk5BlicEpuj"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "lbvFsCMcKiAH"
       },
       "execution_count": null,
       "outputs": []
