--- a/Semana3/Sesion5.ipynb
+++ b/Semana3/Sesion5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNOCjrhOtcNDZu1q9SQLL4A",
+      "authorship_tag": "ABX9TyOj8dV4x82j/mbviDlKH2qS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,11 +33,23 @@
         "id": "ZfsiCKz8Sar3"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "from google.colab import drive\n",
+        "from google.colab import files\n",
+        "drive.mount('/content/drive', force_remount=True)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import os\n",
+        "os.chdir('/content/drive/MyDrive/ColabNotebooks/Cursos/CursoCienciaDatos/Semana3')\n",
+        "!ls"
+      ],
       "metadata": {
         "id": "iT9uWFyPShBd"
       },
