--- a/Semana3/Sesion5.ipynb
+++ b/Semana3/Sesion5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOiWd4Sn671ODQyc+h86U5r",
+      "authorship_tag": "ABX9TyPz4eAJJ7NYELLdRFwNe3C1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -115,7 +115,7 @@
         "id": "-FpEz8o_Scn8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 677
+          "height": 676
         },
         "outputId": "b4914e41-2944-4a58-c837-d0d6136f9b3f"
       },
@@ -909,10 +909,90 @@
     {
       "cell_type": "code",
       "source": [
-        "# que hacemos con los valores no asignados\n"
+        "# que hacemos con los valores no asignados\n",
+        "data.dropna(inplace=True) # Inplace reemplaza el dataframe original en el mismo punto de la memoria"
       ],
       "metadata": {
         "id": "FGmkh6pBkBjU"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "16BPxIK9lRUV",
+        "outputId": "46361e38-666c-4969-85e1-8f5a8a246b84"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Index: 45207 entries, 0 to 45214\n",
+            "Data columns (total 17 columns):\n",
+            " #   Column     Non-Null Count  Dtype  \n",
+            "---  ------     --------------  -----  \n",
+            " 0   age        45207 non-null  int64  \n",
+            " 1   job        45207 non-null  object \n",
+            " 2   marital    45207 non-null  object \n",
+            " 3   education  45207 non-null  object \n",
+            " 4   default    45207 non-null  object \n",
+            " 5   balance    45207 non-null  float64\n",
+            " 6   housing    45207 non-null  object \n",
+            " 7   loan       45207 non-null  object \n",
+            " 8   contact    45207 non-null  object \n",
+            " 9   day        45207 non-null  int64  \n",
+            " 10  month      45207 non-null  object \n",
+            " 11  duration   45207 non-null  float64\n",
+            " 12  campaign   45207 non-null  int64  \n",
+            " 13  pdays      45207 non-null  float64\n",
+            " 14  previous   45207 non-null  int64  \n",
+            " 15  poutcome   45207 non-null  object \n",
+            " 16  y          45207 non-null  object \n",
+            "dtypes: float64(3), int64(4), object(10)\n",
+            "memory usage: 6.2+ MB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Mirar registros repetidos ()\n",
+        "print(data.duplicated().sum())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Bvthjb0ZlbRH",
+        "outputId": "46d6d531-f9f5-4c30-adb3-09ef28471a4a"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "hfHpK1pxlsBy"
       },
       "execution_count": null,
       "outputs": []
