--- a/Semana3/Sesion5_1.ipynb
+++ b/Semana3/Sesion5_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNghYDZX9JnttBYrROe7GJX",
+      "authorship_tag": "ABX9TyPx997Ob2g6/bKcw6QorH8c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1811,11 +1811,10 @@
       "cell_type": "code",
       "source": [
         "for i in range(1,9):\n",
-        "\n",
+        "  print(f'Processing session {i}')\n",
         "  Columns = Features.copy()\n",
         "  Columns[-1] += str(i)\n",
         "  Columns[-2] += str(i)\n",
-        "  #print(Columns)\n",
         "\n",
         "  basemask = data1[Columns]\n",
         "\n",
@@ -1823,47 +1822,113 @@
         "  # Filtro importante # Asiste la persona?\n",
         "\n",
         "  basemask = basemask[mask]\n",
-        "  #print(basemask)\n",
         "\n",
         "  # Guardar la informacion\n",
-        "  print(f'Guadando archivo {i}')\n",
+        "  print(f'Saving file for session {i}')\n",
         "  output = pd.ExcelWriter('Alcaceres_Sesion_'+str(i)+'.xlsx', engine='xlsxwriter')\n",
         "  basemask.to_excel(output, index=False, sheet_name='Hoja1')\n",
-        "  #output.save()"
+        "  output.close()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-VPmkixdzKwq",
-        "outputId": "0872a15f-2f1a-4dda-9a23-81e714cf817f"
+        "outputId": "86f9e81a-2a91-4e40-e781-d2372f3cfc81"
       },
-      "execution_count": 15,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Guadando archivo 1\n",
-            "Guadando archivo 2\n",
-            "Guadando archivo 3\n",
-            "Guadando archivo 4\n",
-            "Guadando archivo 5\n",
-            "Guadando archivo 6\n",
-            "Guadando archivo 7\n",
-            "Guadando archivo 8\n"
+            "Processing session 1\n",
+            "Saving file for session 1\n",
+            "Processing session 2\n",
+            "Saving file for session 2\n",
+            "Processing session 3\n",
+            "Saving file for session 3\n",
+            "Processing session 4\n",
+            "Saving file for session 4\n",
+            "Processing session 5\n",
+            "Saving file for session 5\n",
+            "Processing session 6\n",
+            "Saving file for session 6\n",
+            "Processing session 7\n",
+            "Saving file for session 7\n",
+            "Processing session 8\n",
+            "Saving file for session 8\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "output = pd.ExcelWriter('Alcaceres.xlsx', engine='xlsxwriter')\n",
+        "\n",
+        "for i in range(1,9):\n",
+        "  print(f'Processing session {i}')\n",
+        "  Columns = Features.copy()\n",
+        "  Columns[-1] += str(i)\n",
+        "  Columns[-2] += str(i)\n",
+        "\n",
+        "  basemask = data1[Columns]\n",
+        "\n",
+        "  mask = basemask[Columns[-1]] == 1\n",
+        "  # Filtro importante # Asiste la persona?\n",
+        "\n",
+        "  basemask = basemask[mask]\n",
+        "\n",
+        "  # Guardar la informacion\n",
+        "  print(f'Saving info for sheet {i}')\n",
+        "  basemask.to_excel(output, index=False, sheet_name='Hoja'+str(i))\n",
+        "\n",
+        "output.close()"
+      ],
       "metadata": {
-        "id": "-DwAvfJ0zNgn"
+        "id": "-DwAvfJ0zNgn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e715d9bc-c868-4142-b3b3-bf18e18ed07d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processing session 1\n",
+            "Saving info for sheet 1\n",
+            "Processing session 2\n",
+            "Saving info for sheet 2\n",
+            "Processing session 3\n",
+            "Saving info for sheet 3\n",
+            "Processing session 4\n",
+            "Saving info for sheet 4\n",
+            "Processing session 5\n",
+            "Saving info for sheet 5\n",
+            "Processing session 6\n",
+            "Saving info for sheet 6\n",
+            "Processing session 7\n",
+            "Saving info for sheet 7\n",
+            "Processing session 8\n",
+            "Saving info for sheet 8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Instrucción\n",
+        "\n",
+        "## Guardar en un solo archivo la información de cada sesión en hojas individuales"
+      ],
+      "metadata": {
+        "id": "FAZgcir34iyd"
+      }
     },
     {
       "cell_type": "code",
