--- a/Semana6/EstudioRedNeuronal.ipynb
+++ b/Semana6/EstudioRedNeuronal.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM6OZ7k/C+dGvLsrH0X8wtu",
+      "authorship_tag": "ABX9TyNRceKCkB55ZYlCQupb1usS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7FsHflgPje2D",
-        "outputId": "3c0e6992-0061-443a-dea1-99e4a6f28b21"
+        "outputId": "a6ba9b77-1e6c-4e7a-a801-2cb377d54bbb"
       },
       "outputs": [
         {
@@ -64,7 +64,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "duwKO7eSjo06",
-        "outputId": "87d969cb-ed9c-411e-a5c4-caaaffaa8d15"
+        "outputId": "8296e3ed-ed72-49ee-fb4c-844c288d5a1e"
       },
       "execution_count": 2,
       "outputs": [
@@ -79,9 +79,45 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.metrics import roc_curve, roc_auc_score, classification_report, confusion_matrix\n",
+        "\n",
+        "import tensorflow as tf\n",
+        "from tensorflow.keras import Sequential\n",
+        "from tensorflow.keras.layers import Dense, Dropout\n",
+        "from tensorflow.keras.callbacks import EarlyStopping\n",
+        "from tensorflow.keras.metrics import AUC as KerasAUC"
+      ],
+      "metadata": {
+        "id": "SrRsvmf9rgUB"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = pd.read_csv('Datos/Churn_Modelling.csv')\n",
+        "#df"
+      ],
       "metadata": {
         "id": "6IEH4nUUjvQn"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "nmX0WzWYre78"
       },
       "execution_count": null,
       "outputs": []
